sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:10: error: not found: value indice
          if (plusPetit(getValeur(indice),getValeur(i)))
                                  ^AlgBubbleSort1:12: error: not found: value indice
              echange(i,indice)
                        ^AlgBubbleSort1:18: error: not found: value echanger
  while(!echanger)
         ^